<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
  
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
   
    <CheckBox
      android:id="@+id/lm_toggle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="onToggleLandmarks"
      android:text="@string/Landmarks"/>
	<CheckBox
      android:id="@+id/tr_toggle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="onToggleTraffic"
      android:text="@string/Traffic"/>

	<CheckBox
      android:id="@+id/ex_toggle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="onToggleExtruded"
      android:text="@string/Extruded"/>
	
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
   
    <CheckBox
      android:id="@+id/vn_toggle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="onToggleVenues"
      android:text="@string/Venues"/>
	<CheckBox
      android:id="@+id/st_toggle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="onToggleStreetLevel"
      android:text="@string/StreetLevel"/>
	<CheckBox
      android:id="@+id/eb_toggle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="onToggleEmbedded"
      android:text="@string/Embedded"/>	
  </LinearLayout>
  
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <SeekBar
      android:id="@+id/tilt_bar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"/>
  </LinearLayout>
  
  <fragment
     class="com.here.android.mapping.MapFragment"
        android:id="@+id/map"
        android:layout_width="match_parent" 
        android:layout_height="match_parent"
        />
</LinearLayout>